# animals-hack

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: testing.yaml
animals/backend/: api.py  config.py  main.py  report.py
animals/backend/consumer/: __main__.py  app.py  logger.py
animals/backend/consumer/config/: logging.conf.yml  settings.py
animals/backend/consumer/handlers/: handler.py
animals/backend/consumer/handlers/utils/: __init__.py  bbox.py  call_triton.py  config_report.py  reports.py
animals/backend/consumer/storage/: db.py  rabbit.py
animals/backend/web/: __main__.py  app.py  logger.py  metrics.py
animals/backend/web/api/tech/: __init__.py  liveness.py  readiness.py
animals/backend/web/api/v1/: handler.py  schemas.py  utils.py
animals/backend/web/api/v2/: handler.py
animals/backend/web/config/: .env.example  logging.conf.yml  settings.py
animals/backend/web/models/: __init__.py  images.py  jobs.py  jobs_images.py  meta.py
animals/backend/web/storage/: db.py  rabbit.py
animals/frontend/: .env-sample  package-lock.json  package.json
animals/frontend/public/: index.html  manifest.json
animals/frontend/src/: App.js  index.css  index.js
animals/frontend/src/api/: api.js
animals/frontend/src/components/ConfidenceLevelInput/: ConfidenceLevelInput.css  ConfidenceLevelInput.jsx
animals/frontend/src/components/DownloadPdfButton/: DownloadPdfButton.css  DownloadPdfButton.jsx
animals/frontend/src/components/FileUploader/: FileUploader.css  FileUploader.jsx
animals/frontend/src/components/Footer/: Footer.jsx
animals/frontend/src/components/Header/: Header.js  style.css
animals/frontend/src/components/PhotoBox/: PhotoBox.css  PhotoBox.jsx
animals/frontend/src/components/PhotoGallery/: PhotoGallery.css  PhotoGallery.jsx
animals/frontend/src/components/SizeInput/: SizeInput.css  SizeInput.jsx
animals/frontend/src/components/StatsContainer/: StatsContainer.jsx
animals/frontend/src/components/file_uploader/: FileUploader.jsx
animals/frontend/src/components/headers/: Header.js
animals/frontend/src/components/info/: InfoPage.js
animals/frontend/src/components/main/: MainPage.jsx
animals/frontend/src/components/videoPlayer/: style.css  (+1 more)
animals/frontend/src/contexts/: FilesContext.jsx
animals/frontend/src/mocks/: mocks.js
animals/triton/models/detector/: config.pbtxt
conf/nginx/: nginx.conf
docker/backend/: Dockerfile
docker/frontend/: Dockerfile
docker/triton/: Dockerfile
notebooks/: Baseline.ipynb  Inference.ipynb  InferenceTest.ipynb  TwoStageSmall.ipynb  TwoStageSmallNegative-Copy2.ipynb  TwoStageSmallNegative.ipynb  TwoStageSmallPWL.ipynb  get_onnx.ipynb
notebooks/misc/: data.py  metrics.py  train.py
tests/: test_project.py  test_report.py  test_utils.py
(+8 files in other folders)
